grafana-dns.yaml
kind: Service
apiVersion: v1
metadata:
  name: grafana-service
spec:
  type: ExternalName
  externalName: loki-grafana.loki-stack.svc.cluster.local
