ingress.yaml
# https://kubernetes.github.io/ingress-nginx/user-guide/nginx-configuration/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bifrost-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-issuer-prod
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - repeti2.com
        - www.repeti2.com
      secretName: tls-secret-prod
  rules:
    - host: www.repeti2.com
      http:
        paths:
          - path: /api/?(.*)
            pathType: Prefix
            backend:
              service:
                name: headcrab-service
                port:
                  number: 80
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: torii-service
                port:
                  number: 80
