ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bifrost-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - repeti2.com
    secretName: tls-secret-prod
  rules:
  - host: repeti2.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: headcrab-service
              port:
                number: 80
  - host: api.repeti2.com
    http:
    paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: headcrab-service
            port:
              number: 80
